2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* ventas.c (FillProductSell): Replaced g_ascii_strtod() for
	g_strtod() and PUT macro.
	(SearchProductByCode): Added a gdouble stock var to eval if the
	product really has stock. This avoid any problem of products with
	stock between 0 and 1.

2008-07-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_informes.c (fill_products_rank): Avoided the problem that
	was showing a nan% when there wasn't a margin.

	* postgres-functions.c (ReturnProductsRank): Replaced the long
	query for the use of ranking_ventas() plpsql function.

2008-07-25  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* manejo_productos.c (CompraCreateNew): If the product doesn't
	exist we return NULL.
	(CompraAgregarALista): If we couldn't get the info of a product we
	return FALSE.

	* compras.c (AddToProductsList): Deleted code that was launching
	AskForCurrentPrice() function. If the barcode it's empty we just
	return without doing nothing.
	(AskForCurrentPrice, AcceptCurrentPrice)
	(CloseAskForCurrentPrice): Deleted functions.
	(AddToProductsList): Added check to know if the product was added
	to the list.

	* postgres-functions.c (GetDayToSell): Deleted function.
	(GetVencDate, GetElabDate, PagarFactura): Deleted commented code.

2008-07-25  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (PutComa): Any coma or point will be
	replaced by the decimal point defined with the locale.

	* manejo_productos.c (CalcularTotalCompra): Changed to gdouble the
	type of variable total.

	* compras.c (SearchProductHistory): Used only the plpsql function
	informacion_producto() to get the info to show on buy tab. This
	will speed up the time that take show this information.

	* ventas.c (check_passwd, exit_response): Added the use of
	log_register_access () to log the login/logout of a user.

	* utils.c (log_register_access): Added function to register a log
	in/out of a user into the log table.
