@@ -1,5 +1,9 @@
 2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>
 
+	* caja.h: Deleted GtkWidget *caja_button.
+
+	* caja.c (ArqueoCajaLastDay): Deleted function.
+
 	* ventas.c (FillProductSell): Replaced g_ascii_strtod() for
 	g_strtod() and PUT macro.
 	(SearchProductByCode): Added a gdouble stock var to eval if the
